--- a/assets/locales/en/help.json
+++ b/assets/locales/en/help.json
@@ -1,4 +1,5 @@
 {
     "User.uid": "User ID must be between 0 and 4294967295",
+    "Group.uid": "Group ID must be between 0 and 4294967295",
     "Storage.importMedia.mediaFsType": "Leave field empty to autodetect filesystem type"
 }
